<?xml version="1.0"?>
<package format="3">
  <name>livox_sdk2</name>
  <version>1.1.0</version>
  <description>Livox SDK2 Library for ROS 2 Workspace</description>
  <maintainer email="dev@livoxtech.com">Livox Dev Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>git</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>